[package]
name = "sockserv"
version = "0.1.0-alpha.1"
edition = "2024"

[dependencies]
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
arbitrary = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
fuzzing = ["arbitrary"]

[[bench]]
name = "socks_benchmark"
harness = false
required-features = ["fuzzing"]
